--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,12 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/example_package"]
+
 [project]
+name = "example_package"
+version = "0.0.1"
 
 authors = [
   { name="Example Author", email="author@example.com" },
