--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -10,6 +10,7 @@ env:
   CLOUDSMITH_PRODUCTION_REPO: ${{ vars.CLOUDSMITH_PRODUCTION_REPO }}
   CLOUDSMITH_SERVICE_SLUG: ${{ vars.CLOUDSMITH_SERVICE_SLUG }}
   PACKAGE_NAME: 'example_package'
+  TAG_NAME: "ready-for-production"
 
 permissions:
   id-token: write
@@ -20,38 +21,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Debug incoming payload
-        run: |
-          echo "Repository dispatch event received at $(date)"
-          echo "Event type: ${{ github.event.action || 'repository_dispatch' }}"
-          echo "Full client_payload:"
-          echo "${{ toJson(github.event.client_payload) }}"
-        shell: bash
-
       - name: Install Cloudsmith CLI
         uses: cloudsmith-io/cloudsmith-cli-action@v1.0.1
         with:
           oidc-namespace: ${{ env.CLOUDSMITH_NAMESPACE }}
           oidc-service-slug: ${{ env.CLOUDSMITH_SERVICE_SLUG }}
 
-      - name: Get package identifier and promote
+      - name: Identify Syncronised Package and Tag
         run: |
-          # Query for the package and get its identifier
-          PACKAGE_QUERY="filename:${PACKAGE_NAME}-${{ github.event.inputs.package_version }}.tar.gz"
-          echo "Searching for package with query: $PACKAGE_QUERY"
-          
-          PACKAGE_DATA=$(cloudsmith list package ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }} -q "$PACKAGE_QUERY" -F json)
-          
-          # Extract the identifier_perm using jq
-          IDENTIFIER=$(echo "$PACKAGE_DATA" | jq -r '.data[0].identifier_perm')
-          
-          if [ -z "$IDENTIFIER" ] || [ "$IDENTIFIER" = "null" ]; then
-            echo "Failed to find package identifier"
+          IDENT=${{ github.event.client_payload.identifier_perm }}
+          if [ -z "$IDENT" ]; then
+            echo "No identifier_perm provided by webhook."
             exit 1
           fi
-          
-          echo "Found package identifier: $IDENTIFIER"
-          
+          cloudsmith tag add \
+            ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}\
+            "$IDENT" \
+            ${{ env.TAG_NAME}}
+            
+      - name: Promote all ready-for-production packages
+        run: |
+          PKG_DATA=$(cloudsmith list package \
+            ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}\
+            -q "tag:${{ env.TAG_NAME}}" -F json)
+
+          IDS=$(echo "$PKG_DATA" | jq -r '.data[].identifier_perm')
+
+          if [ -z "$IDS" ]; then
+            echo "No packages tagged ${{ env.TAG_NAME}}."
+            exit 0
+          fi
+
+          for ID in $IDS; do
           # Promote package using the identifier
           cloudsmith mv --yes \
             ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}/$IDENTIFIER \
