--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -63,4 +63,5 @@ jobs:
           cloudsmith mv --yes \
             ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}/$IDENTIFIER \
             ${{ env.CLOUDSMITH_PRODUCTION_REPO }}
+          done
         shell: bash
